🐛 Fix check this out button on smaller screen sizes

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -92,7 +92,7 @@ a {
   }
 }
 
-@media only screen and (max-width: 760px) ti{
+@media only screen and (max-width: 760px) {
 
   .blocktext__img {
     width: 100%;
